--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <meta name="google-site-verification" content="_QV4dWrm2gw76XjKbK2XdpBgY2AIABWf4tWyfBH4Rhw" />
     </head>
     <body>
-        <img class="vikisport" src="images/65346грг.png" id="top"/>
+        <img class="vikisport" src="65346грг.png" id="top"/>
         <h1>Все спорты</h1>
         <h2>Внимания: Некоторые спорты ещё не открыты :(</h2>
         <h2>К</h2>
         <ul>
             <li>
-                <a href="pages/ВикиСпортКапоэйра/index.html">Капоэйра</a>
+                <a href="indexkapoeira.html">Капоэйра</a>
             </li>
         </ul>
         <a class="ontop" href="#top">Наверх</a>
